<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LottoAdmin</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="profile">profile</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="lotto_lottery">Lotto Lottery</string>
    <string name="_00">00</string>
    <string name="member">MEMBER</string>
    <string name="schemes">Schemes</string>
    <string name="no_of_participants">No of Participants :</string>
    <string name="winning_amount">Winning Amount :</string>
    <string name="price">Price :</string>
    <string name="_1000">1000</string>
    <string name="no_of_winners">No of Winners :</string>
    <string name="space">-</string>
    <string name="enter_price">Enter Price</string>
    <string name="enter_participation_limit">Enter Participation Limit</string>
    <string name="enter_number_of_winners">Enter Number of Winners</string>
    <string name="enter_winning_price_start_at">Enter Winning Price Start At</string>
    <string name="enter_winning_prince_end_at">Enter Winning Prince End At</string>
    <string name="save">Save</string>
    <string name="sales">Sales</string>
    <string name="settings">Winners</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="scheme_price">Scheme Price :</string>
    <string name="quantity">Quantity :</string>
    <string name="total_amount_spent">Total Amount Spent :</string>
    <string name="abc_xyz_com">abc@xyz.com</string>
    <string name="under_scheme">Under Scheme :</string>
    <string name="prize_won">Prize Won :</string>
    <string name="add_winner">Add Winner</string>
    <string name="add_scheme">Add Scheme</string>
    <string name="members">Members</string>
    <string name="feedbacks">Feedbacks</string>
</resources>
