<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    android:padding="15dp"
    tools:context=".AddWinner">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_lotto"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:contentDescription="@string/lotto_lottery" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:autofillHints="@string/price"
        android:textAllCaps="true"
        android:text="@string/add_winner"
        android:textSize="24sp"
        android:padding="10dp"
        android:gravity="center"
        android:fontFamily="@font/roboto_regular"/>

    <EditText
        android:id="@+id/add_winner_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:autofillHints="@string/price"
        android:background="@drawable/et_bg"
        android:fontFamily="@font/roboto_regular"
        android:hint="Enter Name"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/add_winner_prize"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:autofillHints="@string/enter_participation_limit"

        android:background="@drawable/et_bg"
        android:fontFamily="@font/roboto_regular"
        android:hint="Enter Prize Amount"
        android:inputType="number"
        android:padding="10dp" />

    <EditText
        android:id="@+id/add_winner_scheme"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:autofillHints="@string/no_of_winners"
        android:background="@drawable/et_bg"

        android:fontFamily="@font/roboto_regular"
        android:hint="Enter Scheme"
        android:inputType="number"
        android:padding="10dp" />

    <Button
        android:id="@+id/save_winner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/btn_bg"
        android:text="@string/save"
        android:padding="10dp" />

</LinearLayout>