<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/colorAccent"
    app:cardCornerRadius="10dp"
    android:padding="10dp"
    android:layout_margin="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <TextView
            android:id="@+id/sales_amounttotal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sales_quantity_text"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/TextView213556"
            android:layout_marginBottom="5dp"
            android:text="@string/_1000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/scheme_price"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sales_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/textView"
            android:text="@string/welcome_admin"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sales_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/textView3"
            android:text="@string/abc_xyz_com"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sales_schemeprice_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/textView4"
            android:text="@string/_1000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sales_quantity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_toEndOf="@+id/TextView2135"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/_1000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView2135"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/quantity"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/TextView213556"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/TextView2135"
            android:text="@string/total_amount_spent"
            android:textSize="16sp"
            android:textStyle="normal" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>